src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>SomTv_AdFProjekt__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Projekt der AdFactory,  welches Produkte verschiedener Opportunities innerhalb und außerhalb Commitments gruppiert</description>
        <inlineHelpText>Projekt der AdFactory,  welches Produkte verschiedener Opportunities innerhalb und außerhalb Commitments gruppiert</inlineHelpText>
        <label>AdFProjekt</label>
        <referenceTo>SomTv_AdfProjekt__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_AdFactoryAnteilInProzent__c</fullName>
        <formula>IF( Amount ==0, 0, SomTv_AdfactoryAnteilAbsolut__c /    Amount  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AdFactory Anteil (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_Adf_Rechnung_Produktionskosten__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enthält die Adresse für Produktionskosten, falls diese von Agentur/Account abweichen</description>
        <inlineHelpText>Enthält die Adresse für Produktionskosten, falls diese von Agentur/Account abweichen</inlineHelpText>
        <label>Rechnungsadresse Produktionskosten</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Rechnung - Produktionskosten)</relationshipLabel>
        <relationshipName>OpportunitiesProduktion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_AdfactoryAnteilAbsolut__c</fullName>
        <label>Adfactory Anteil (absolut)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_AgenturAccountnummer__c</fullName>
        <description>Accountnummer der Agentur</description>
        <formula>Value(SomTv_Agentur__r.AccountNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accountnummer der Agentur</inlineHelpText>
        <label>Agentur Accountnummer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Agentur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agentur</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Agenturverbund__c</fullName>
        <formula>SomTv_Agentur__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agenturverbund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_BesonderheitenZumKunden__c</fullName>
        <label>Besonderheiten zum Kunden</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_Beziehung__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bitte wählen Sie eine gültige Kunde-Agentur Beziehung aus.</description>
        <inlineHelpText>Bitte wählen Sie eine gültige Kunde-Agentur Beziehung aus.</inlineHelpText>
        <label>Beziehung</label>
        <referenceTo>SomTv_KundeAgenturBeziehung__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_BuchungszeitraumBis__c</fullName>
        <description>Gebt hier den Gesamt-Buchungszeitraum ein, auf den in den Bausteinen gebucht werden soll.</description>
        <inlineHelpText>Gebt hier den Gesamt-Buchungszeitraum ein, auf den in den Bausteinen gebucht werden soll.</inlineHelpText>
        <label>Buchungszeitraum bis:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_BuchungszeitraumVon__c</fullName>
        <description>Gebt hier den Gesamt-Buchungzeitraum ein, auf den in den Bausteinen gebucht werden soll.</description>
        <inlineHelpText>Gebt hier den Gesamt-Buchungzeitraum ein, auf den in den Bausteinen gebucht werden soll.</inlineHelpText>
        <label>Buchungszeitraum von:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomTv_ErlaeuterungGeschaeftsvorfall_del__c</fullName>
        <label>Erläuterung Geschäftsvorfall</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SomTv_Externe_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enthält die ProSedi-ID zur Rechnungsadresse</description>
        <inlineHelpText>Enthält die ProSedi-ID zur Rechnungsadresse</inlineHelpText>
        <label>ProSedi ID buchender Kunde</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>P7S1_ExternalId__c.P7S1_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>P7S1_ExternalId__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Jahr__c</fullName>
        <label>Jahr</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                    <default>true</default>
                    <label>2017</label>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_Konvergent__c</fullName>
        <description>Bei konvergente Projekten muss in jeder OLI das Feld konvergenz &quot;aktiviert&quot; werden.</description>
        <inlineHelpText>Bei konvergente Projekten muss in jeder OLI das Feld konvergenz &quot;aktiviert&quot; werden.</inlineHelpText>
        <label>konvergent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>nein</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_Laufende_Nummer_ProCommit__c</fullName>
        <description>Laufende Nummer zur Festlegung der Eindeutigkeit der Vereinbarung</description>
        <inlineHelpText>Laufende Nummer zur Festlegung der Eindeutigkeit der Vereinbarung</inlineHelpText>
        <label>Laufende Nummer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_MB3AJ__c</fullName>
        <description>MB3AJ</description>
        <inlineHelpText>MB3AJ</inlineHelpText>
        <label>SomTv_MB3AJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1__c</fullName>
        <label>MN1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3AJ__c</fullName>
        <description>MN3 Ist-Wert</description>
        <inlineHelpText>MN3 Ist-Wert</inlineHelpText>
        <label>MN3AJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3VJ__c</fullName>
        <label>MN3VJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3__c</fullName>
        <description>MN3 als für gesamt P7S1 abgestimmter Standard Wert
[ Nettoinvestment der Opportunity bzw. MN3= MN2-Skonto% ]</description>
        <inlineHelpText>MN3 als für gesamt P7S1 abgestimmter Standard Wert
[ Nettoinvestment der Opportunity bzw. MN3= MN2-Skonto% ]</inlineHelpText>
        <label>MN3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_Mb1BezahltSumOli__c</fullName>
        <description>Rollup-Hilfsfeld. Summe MB1 Bezahlt aus OLI</description>
        <inlineHelpText>Summe MB1 (bezahlt) aus Opportunity-Produkt</inlineHelpText>
        <label>MB1 (bezahlt)</label>
        <summarizedField>OpportunityLineItem.SomTv_MB1Bezahlt__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomTv_Mn3SumOli__c</fullName>
        <description>Rollup-Hilfsfeld. Wird per Apex für Adf übertragen in SomTv_MN3__c</description>
        <inlineHelpText>Rollup-Hilfsfeld. Wird per Apex für Adf übertragen in SomTv_MN3__c</inlineHelpText>
        <label>SomTv_Mn3SumOli</label>
        <summarizedField>OpportunityLineItem.SomTv_MN3__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomTv_MutterOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mutter Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SomTv_Jahr__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.SomTv_Jahr__c</valueField>
            </filterItems>
            <infoMessage>Es werden nur Opportunities aus dem selben Jahr angezeigt.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tochter Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_OppDSTypNameHilfsfeld__c</fullName>
        <description>Hilfsfeld für das Objekt &quot;Verträge TV&quot;. Opp DS NAME wird dort per Formel geschrieben.</description>
        <label>Opp DS-Typ Name Hilfsfeld</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_OppsNummer__c</fullName>
        <displayFormat>OPP-{00000000}</displayFormat>
        <label>Opps Nummer</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SomTv_Paketbegruendung__c</fullName>
        <label>Paketbegründung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_PlattformSort__c</fullName>
        <description>berechnet Sortierkriterium für Plattformen</description>
        <formula>CASE( SomTv_Plattform__c ,
&apos;Kernsender&apos;, 100,
&apos;Sixx&apos;, 200,
&apos;P7MAXX&apos;, 300,
&apos;S1G&apos;, 400,
&apos;K1Doku&apos;,500,
&apos;Online&apos;,600,
9999
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnet Sortierkriterium für Plattformen</inlineHelpText>
        <label>Plattform (Sortierung)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Plattform__c</fullName>
        <description>Kernsender
Sixx
Sat Gold</description>
        <inlineHelpText>Bitte wählen Sie die Plattform:
Kernsender
Sixx
Sat Gold</inlineHelpText>
        <label>Plattform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sixx</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Kernsender</fullName>
                </value>
                <value>
                    <fullName>S1G</fullName>
                </value>
                <value>
                    <fullName>P7MAXX</fullName>
                </value>
                <value>
                    <fullName>K1Doku</fullName>
                </value>
                <value>
                    <fullName>Adressable TV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_ProSedi_ID_Rechnungsadresse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ProSedi ID abweichender Rechnungsempfänger</description>
        <inlineHelpText>ProSedi ID abweichender Rechnungsempfänger</inlineHelpText>
        <label>ProSedi ID Rechnungsadresse</label>
        <referenceTo>P7S1_ExternalId__c</referenceTo>
        <relationshipLabel>Opportunities (ProSedi ID Rechnungsadresse)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_ProSedi_ID_betreuende_Agentur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Einkaufsagentur (Auftragsanlage / Adressat der Einschaltpläne)</description>
        <inlineHelpText>Einkaufsagentur (Auftragsanlage / Adressat der Einschaltpläne)</inlineHelpText>
        <label>ProSedi ID betreuende Agentur</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>P7S1_ExternalId__c.P7S1_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>P7S1_ExternalId__c</referenceTo>
        <relationshipLabel>Opportunities (ProSedi ID betreuende Agentur)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_ProbabilityTemp__c</fullName>
        <description>Speichert manuell gepflegte Wahrscheinlich zwischen, zur späteren Wiederherstellung, wenn durch Phasenwechsel Wahrscheinlichkeit 0 0% gesetzt würde.
Nur für Admins/Workflow Zugriffsrecht.</description>
        <inlineHelpText>Speichert manuell gepflegte Wahrscheinlich zwischen, zur späteren Wiederherstellung, wenn durch Phasenwechsel Wahrscheinlichkeit 0 0% gesetzt würde.
Nur für Admins/Workflow Zugriffsrecht.</inlineHelpText>
        <label>Wahrscheinlichkeit temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_RecTypeSort__c</fullName>
        <description>berechnet Sortierkriterium für RecordTypes</description>
        <formula>CASE( RecordType.DeveloperName ,
&apos;SomTv_Commitment&apos;, 1,
&apos;SomTv_Zubuchung&apos;, 2,
&apos;SomTv_Paket&apos;, 3,
&apos;SomTv_BuchungenOhneVertraege&apos;, 4,
&apos;SomTv_AdFactory&apos;,1000,
9999
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnet Sortierkriterium für RecordTypes</inlineHelpText>
        <label>RecordType (Sortierung)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_Sort__c</fullName>
        <description>berechnet die Gesamtsortierung</description>
        <formula>IF ( VALUE(TEXT(SomTv_Jahr__c))&gt;0,
-VALUE(TEXT(SomTv_Jahr__c))*10000
+  SomTv_PlattformSort__c
+  SomTv_RecTypeSort__c,

9999
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>berechnet die Gesamtsortierung</inlineHelpText>
        <label>Sortierung</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomTv_StateInfos__c</fullName>
        <description>Infos zur Distribuierung bei Regionalkunden</description>
        <inlineHelpText>Infos zur Distribuierung bei Regionalkunden</inlineHelpText>
        <label>Bundesland (DE) Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_State__c</fullName>
        <description>Bundesländer (DE) für die Distribuierung bei Regionalkunden</description>
        <inlineHelpText>Bundesländer (DE) für die Distribuierung bei Regionalkunden</inlineHelpText>
        <label>Bundesland (DE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Baden-Württemberg</fullName>
                </value>
                <value>
                    <fullName>Bayern</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Brandenburg</fullName>
                </value>
                <value>
                    <fullName>Bremen</fullName>
                </value>
                <value>
                    <fullName>Hamburg</fullName>
                </value>
                <value>
                    <fullName>Hessen</fullName>
                </value>
                <value>
                    <fullName>Mecklenburg-Vorpommern</fullName>
                </value>
                <value>
                    <fullName>Niedersachsen</fullName>
                </value>
                <value>
                    <fullName>Nordrhein-Westfalen</fullName>
                </value>
                <value>
                    <fullName>Rheinland-Pfalz</fullName>
                </value>
                <value>
                    <fullName>Saarland</fullName>
                </value>
                <value>
                    <fullName>Sachsen</fullName>
                </value>
                <value>
                    <fullName>Sachsen-Anhalt</fullName>
                </value>
                <value>
                    <fullName>Schleswig-Holstein</fullName>
                </value>
                <value>
                    <fullName>Thüringen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_Top1Wirtschaftsbereich__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top1 Wirtschaftsbereich</label>
        <referenceTo>Som_Top1Wirtschaftsbereich__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Chancen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_UniqueKey__c</fullName>
        <description>Unique Feld für kombiniertem Schlüssel</description>
        <inlineHelpText>Unique Feld für kombiniertem Schlüssel</inlineHelpText>
        <label>SomTv_UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomTv_Vertriebsweg__c</fullName>
        <label>Vertriebsweg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Klassisch</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Dezentral</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>DRTV</fullName>
                </value>
                <value>
                    <fullName>RWZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomTv_YieldBilateralIst__c</fullName>
        <formula>SomTv_MN3AJ__c/SomTv_MB3AJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SomTv_YieldBilateralIst</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Som_BmvDigital__c</fullName>
        <label>BMV Digital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Som_BmvTV__c</fullName>
        <label>BMV TV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Som_DooH7Screen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opportunity enthält Medienbaustein Digital out of Home</inlineHelpText>
        <label>DooH (7Screen)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sports_BausteinProvision__c</fullName>
        <inlineHelpText>Baustein auf den eine Provision für Handelsvertreter fällig wird</inlineHelpText>
        <label>Baustein (Provision)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>DooH</fullName>
                </value>
                <value>
                    <fullName>On the ground</fullName>
                </value>
                <value>
                    <fullName>Sonstiger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sports_BeschreibungSonstigerBaustein__c</fullName>
        <inlineHelpText>um was für einen Baustein handelt es sich genau (z.B. On the ground)</inlineHelpText>
        <label>Beschreibung sonstiger Baustein</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sports_Beschreibung__c</fullName>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sports_NameHandelsvertreter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name Handelsvertreter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Name Handelsvertreter)</relationshipLabel>
        <relationshipName>Sports_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sports_OnTheGround__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On the Ground</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sports_Provision__c</fullName>
        <description>Höhe der Provision</description>
        <inlineHelpText>Höhe der Provision (absolut)</inlineHelpText>
        <label>Provision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sports_Sonstige__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>weitere nicht aufgeführte Media-Bausteine</inlineHelpText>
        <label>Sonstige</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_AdImpressions__c</fullName>
        <inlineHelpText>Anzahl der Ad Impressions</inlineHelpText>
        <label>Ad Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_BMVDigital__c</fullName>
        <inlineHelpText>Brutto Media Volumen Digital Werbung</inlineHelpText>
        <label>BMV Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_BMVDooH__c</fullName>
        <inlineHelpText>Brutto Volumen Digital out of Home</inlineHelpText>
        <label>BMV DooH</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_BMVGesamtTV__c</fullName>
        <inlineHelpText>Brutto Media Volumen TV Gesamt</inlineHelpText>
        <label>BMV gesamt (TV)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_BMVOnTopZuBudget__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Unterjährige Erhöhung des freigegeben TV BMVs. On-Top Budget muss durch den Ressortvorstand, das Media Board und das Executive Board freigegeben werden.</inlineHelpText>
        <label>BMV on-top zu Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_BMVSonstigeUmsatzanteile__c</fullName>
        <label>BMV Sonstige Umsatzanteile</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_BMVTVKundenintegration__c</fullName>
        <inlineHelpText>Brutto Media Volumen des Kunden TV Werbeanteils</inlineHelpText>
        <label>BMV TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_BMVgesamt__c</fullName>
        <formula>Star_BMVGesamtTV__c +  Star_BMVDigital__c +  Star_BruttoBarterVolumen__c +  Star_BMVDooH__c +  Star_BMVSonstigeUmsatzanteile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gesamt Brutto Media Volumen (BMV Gesamt TV + BMV Digital + Brutto Barter Volumen + BMV DooH + BMV Sonstige Umsatzanteile)</inlineHelpText>
        <label>BMV gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_BeschreibungBarterBestandteil__c</fullName>
        <inlineHelpText>Beschreibung Inhalte Medien-Baustein Barter</inlineHelpText>
        <label>Beschreibung Barter-Bestandteil</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Star_BeschreibungDigital__c</fullName>
        <inlineHelpText>Beschreibung Inhalte Medien-Baustein Digital</inlineHelpText>
        <label>Beschreibung Digital</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Star_BeschreibungDooH__c</fullName>
        <label>Beschreibung DooH</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Star_BeschreibungSonstigeUmsatzanteile__c</fullName>
        <label>Beschreibung Sonstige Umsatzanteile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Star_BeschreibungTV__c</fullName>
        <inlineHelpText>Beschreibung Inhalte Medien-Baustein TV</inlineHelpText>
        <label>Beschreibung TV</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Star_BeschreibungVariableUmsatzanteile__c</fullName>
        <inlineHelpText>Beschreibung Inhalte des variablen Umsatzanteils und Hintergründe zu deren Kalkulationsbasis</inlineHelpText>
        <label>Beschreibung Variable Umsatzanteile</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Star_BruttoBarterVolumen__c</fullName>
        <inlineHelpText>Brutto Barter Volumen auf deren Basis Gegenleistungen definiert werden</inlineHelpText>
        <label>Brutto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_CCO__c</fullName>
        <label>CCO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_CashCutOffCCO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Cut Off (CCO)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Comedy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comedy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_DavonMN3InPage__c</fullName>
        <inlineHelpText>Media Netto 3 Digital, Anteil der Display Werbung (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 in Page</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_DavonMN3InStream__c</fullName>
        <inlineHelpText>Media Netto 3 Digital Video Werbung, Anteil der Video Werbung (Betrag in EUR) vom MN3 Digital (gesamt)</inlineHelpText>
        <label>Davon MN3 in Stream</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_Einheit__c</fullName>
        <inlineHelpText>Units oder € je nach CCO</inlineHelpText>
        <label>CCO Einheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Units</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Star_FamilyEntertainment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Entertainment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Festivals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Festivals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_GesamtspotaengeInSekunden__c</fullName>
        <inlineHelpText>Länge des Gesamt TV Spots in Sekunden</inlineHelpText>
        <label>Gesamtspotänge (in Sekunden)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_InformationenRechnungsstellung__c</fullName>
        <label>Informationen Rechnungsstellung</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Star_KundenanteilSpotlaengeInSekunden__c</fullName>
        <inlineHelpText>Länge des Kundenanteiles des TV Spots in Sekunden</inlineHelpText>
        <label>Kundenanteil Spotlänge (in Sekunden)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_KundenanteilTrailerInSekunden__c</fullName>
        <label>Kundenanteil Trailer (in Sekunden)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_MN3Digital__c</fullName>
        <inlineHelpText>Media Netto 3 Digital Werbung</inlineHelpText>
        <label>MN3 Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_MN3DooH__c</fullName>
        <label>MN3 DooH</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_MN3SonstigeUmsatzanteile__c</fullName>
        <description>Sonstige Umsatzanteile Starwatch</description>
        <label>MN3 Sonstige Umsatzanteile</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_MN3TVKundenintegration__c</fullName>
        <inlineHelpText>Media Netto 3 des Kunden TV Werbeanteils</inlineHelpText>
        <label>MN3 TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
</CustomObject>